<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SplashScreen</string>
    <string name="hello_world">hello world!</string>
    <string name="ola_tu">Ola tú!</string>
    <string name="hello_world_bienvenido">hello world! Bienvenido!</string>
    <string name="action_settings">Settings</string>
    <string name="image">image</string>
    <string name="bienbenido">New Text</string>
    <string name="Bienbenido">Bienvenido!</string>
    <string name="cargando">Cargando...</string>
    <string name="Cargando">Cargando ...</string>
    <string name="migif">migif</string>
    <string name="loading">loading</string>
    <string name="miimagedos">miimagedos</string>
    <string name="loadingView">loadingView</string>
    <string name="gtar">Gtar</string>
    <string name="loadin">loading</string>
    <string name="title_activity_nueva2">Nueva 2 ;)</string>
    <string name="title_activity_nueva1">Nueva 1 ;)</string>
    <string name="title_activity_about">About ;)</string>
    <string name="title_activity_ventana">Ejemplos</string>
    <string name="info">Esta es una actividad que lleva a otra mediante un botón.</string>
    <string name="pasaractividad2">""Menú loading..."</string>
    <string name="pasaractividad3">Animaciones</string>
    <string name="miimage2">miimage2</string>
    <string name="advertencia">La primera animación disponible, a partir del nivel 14
    en ejemplos, la puedes ver en funcionamiento entrando en splash 3 ;) </string>
    <string name="imageviewww">imageview3</string>
    <string name="miboton">Ejemplos</string>
    <string name="title_activity_splash1">Splash1</string>
    <string name="rom_name">SplashScreen</string>
    <string name="dummy_button">Splash 1</string>
    <string name="dummy_buttonn">Splash 2</string>
    <string name="dummy_buttonnn">Splash 3</string>
    <string name="dummy_content">Animaciones\nSplash</string>
    <string name="go1">Go to activity 1</string>
    <string name="go2">Go to activity 2</string>
    <string name="splasha">Splash 1</string>
    <string name="imagevieww">miimageviewww</string>
    <string name="imageviewwww">imageviewwww</string>
    <string name="calacola">imageviewwww</string>
    <string name="byname">by sdcard 2000</string>
    <string name="nameapp">Splash Screen App</string>
    <string name="action_bar_share_with">Utilizar-la-actionbar-de-sherlock.</string>
    <string name="credits_title">Créditos</string>
    <string name="credits">"• b16h22
• iamareebjamal
• ivn888
• enricocid
• GFX Bandits
• stackoverflow.com
• JakeWharton
• inmite
• Sergey Margaritov
• Google/Android"</string>
    <string name="more_email">Correo del desarrollador</string>
    <string name="more_about">Acerca de la App</string>
    <string name="more">Más</string>
    <string name="email_subject">Correo_electrónico_Asunto_AQUÍ</string>
    <string name="about_title">Acerca de la aplicación</string>
    <string name="dialog_about">SplashScreen App control. Animaciones de inicio,  y mucho más.</string>
    <string name="dialog_enter">SplashScreen App control. Animaciones de inicio,  y mucho más.</string>
    <string name="enter_title">Bienvenidos</string>
    <string name="more_reboot">Reiniciar</string>
    <string name="reboot_title">Reiniciar</string>
    <string name="reboot_message">Quieres reiniciar?</string>
    <string name="positive_button">Aceptar</string>
    <string name="negative_button">Cancelar</string>
    <string name="logob">logo</string>
    <string name="frame">• A continuación os muestro la animación que digo que no está disponible asta el nivel 14.
    • Esta animación está simplificada, no obstante si que se puede animar sin tener que llegar al nivel 14+ pero ya entrariamos en un codigo bastante mas largo y complicado, teniamos que incluir todas las imagenes en java, todo depende de si nuestra aplicación requiere tal codigo, osea si de verdad requiere el nivel la api. Pero eso ya se pondrá en una proxima verción.
    • Por ahora es un codigo bastante sencillito sin muchas complicaciones y a partir del nivel 14+ funciona sin complicaciones</string>
    <string name="start">Start Splash Animation</string>
    <string name="desc">Animation Image</string>
    <string name="iclauncherr">ic_launcherr</string>
    <string name="creditos">Creditos</string>
    <string name="githubthread">Github Thread</string>
    <string name="oooooo">ooooo</string>
</resources>
