<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_holo_dark">


    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:id="@+id/textView"
        android:background="@color/black_overlay"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/miimage2"
        android:background="@drawable/logo"
        android:scaleType="fitCenter"
        android:padding="5dp"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/contLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutMode="opticalBounds"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp">

        <ImageView
            android:id="@+id/loadingView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/loadin" />

        <TextView

            android:id="@+id/loadingTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="#fff"
            android:textSize="12sp"
            android:textStyle="italic"
            android:background="@color/black_overlay"
            android:layout_marginBottom="4dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal">

        <View
            android:id="@+id/Divider"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:background="?attr/dividerVertical"
            android:layout_centerHorizontal="true"/>
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/Divider"
            android:background="?attr/selectableItemBackground"
            android:text="@string/pasaractividad2"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:textStyle="bold"
            android:typeface="serif"
            android:onClick="activity1" />
        <Button
            android:id="@+id/buttonl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackground"
            android:text="@string/go2"
            android:layout_alignParentBottom="true"
            android:onClick="activity2"
            android:layout_toRightOf="@id/Divider"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:textStyle="bold"
            android:typeface="sans" />
        <View style="@style/Custonmvieview" />

        <View style="@style/Custonmvieview" />


    </RelativeLayout>

</LinearLayout>
