<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/background_holo_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:textStyle="bold"
            android:text="@string/rom_name"
            android:gravity="center"
            android:textColor="#33b5e5"
            android:textSize="28.0sp"
            android:background="@color/black_overlay" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:text="@string/nameapp"
            android:gravity="center"
            android:textColor="#ffbb5515"
            android:textSize="16.0sp"
            android:background="@color/black_overlay" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:text="@string/byname"
            android:gravity="center"
            android:textColor="#ffb13530"
            android:textSize="16.0sp"
            android:background="@color/black_overlay" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_gravity="center"
            android:orientation="vertical" >
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:gravity="bottom"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="#cc33b5e5" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textStyle="bold|italic"
                android:text="@string/advertencia"
                android:textColor="#ffffffff"
                android:textSize="16.0sp"
                android:typeface="sans"
                android:background="@color/black_overlay" />
            <ImageView
                android:id="@+id/loadingView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:contentDescription="@string/loadingView"
                android:layout_gravity="center_horizontal"
                android:minHeight="150dp"
                android:minWidth="150dp" />

            <LinearLayout
            android:visibility="gone"
            android:id="@+id/contLoading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:maxHeight="10dip"
                    android:minHeight="10dip"
                    android:progress="50"
                    android:progressDrawable="@drawable/greenprogress"
                    style="?android:attr/progressBarStyleHorizontal" />

                <TextView

                android:id="@+id/loadingTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/loading"
                android:textColor="#ff49c7f1"
                android:textSize="12sp"
                android:background="@color/black_overlay" />


            </LinearLayout>

        </LinearLayout>
        </LinearLayout>

</LinearLayout>
